src/app/components/home-app/event-template-info/event-template-info.component.scss
// Copyright 2021 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.

@use "@angular/material" as mat;
@include mat.elevation-classes();

.elevate {
  @include mat.elevation(2);
}

.event-info-container {
  display: inline-block;
  flex-direction: column;
  min-width: 900px;
  margin-top: 40px;
  width: 900px;
  overflow-y: auto;
  box-shadow: 0 5px 5px -3px #0003, 0 8px 10px 1px #00000024, 0 3px 14px 2px #0000001f;
}

.sp-icon {
  margin-left: 30px;
}

.duration-label {
  margin-top: 5px;
  font-size: small;
}

.duration-label-warn {
  margin-top: 5px;
  font-size: medium;
  font-weight: bold;
  color: warn;
}

.description-text {
  margin-left: 100px;
  margin-right: 100px;
}

.event-button {
  margin-top: 20px;
}

.event-button-end {
  margin-top: 20px;
  margin-left: 20px;
}

.small-font {
  font-size: smaller;
}

.failure-text {
  font-weight: bold;
  color: warn;
}

.title-text {
  margin-left: 20px;
}

.template-name {
  margin-left: 20px;
}

.crucible-logo {
  margin-right: 10px;
}

mat-card {
  background-color: var(--mat-sys-background);
}

.spinner-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.history-table {
  height: 300px;
  overflow-y: auto;
}

.alloy-icon {
  transform: scale(2);
  width: 60px;
  color: var(--mat-sys-primary)
}

